Fix horizontal scrollbar issue when width below 1540px

--- a/source/scss/_partial/common.scss
+++ b/source/scss/_partial/common.scss
@@ -17,7 +17,7 @@
 .archive,
 .post {
     flex: 6;
-    width: 95%;
+    width: 85%;
     border-radius: 10px;
     font-size: 16px;
     box-shadow: 0 3px 10px rgba(0,0,0,0.1);
